# OhMyTechLead

./: Cargo.toml  README.md  install.sh
src/: app.rs  config.rs  discord.rs  docker.rs  main.rs  report.rs  scheduler.rs  storage.rs  tui.rs  whatsapp.rs  wpp_setup.rs
src/ui/: add_task.rs  dashboard.rs  mod.rs  preview.rs  settings.rs  whatsapp_setup.rs
