[package]
name = "oh-my-tech-lead"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "omtl"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
qrcode = "0.14"
